--- a/package.json
+++ b/package.json
@@ -4,29 +4,26 @@
   "description": "Google IMA HTML5 preroll ad plugin for Clappr player.",
   "main": "dist/clappr-google-ima-html5-preroll-plugin.js",
   "scripts": {
-    "dist": "npm run dist-main && npm run dist-min",
-    "dist-main": "webpack --progress",
-    "dist-min": "webpack --progress -p --optimize-mangle --optimize-dedupe --output-filename clappr-google-ima-html5-preroll-plugin.min.js",
-    "watch": "webpack -w",
-    "demo": "http-cli -r ./ -a 0.0.0.0 -p 8090",
-    "check": "david"
+    "build": "webpack --progress",
+    "dist": "webpack --progress",
+    "release": "npm run build && npm run dist",
+    "start": "webpack-dev-server"
   },
   "author": "Karim Slimani <karim@playmedia.fr>",
   "license": "MIT",
   "repository": "kslimani/clappr-google-ima-html5-preroll-plugin",
   "devDependencies": {
-    "babel-core": "6.21.0",
-    "babel-loader": "6.2.10",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-preset-es2015": "6.18.0",
-    "clean-webpack-plugin": "0.1.14",
-    "compass-mixins": "0.12.10",
-    "css-loader": "0.26.1",
-    "david": "9.0.0",
-    "http-cli": "1.1.0",
-    "node-sass": "4.1.1",
-    "sass-loader": "4.1.1",
-    "svg-inline-loader": "0.7.1",
-    "webpack": "1.14.0"
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "compass-mixins": "^0.12.10",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "svg-inline-loader": "^0.7.1",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-notifier": "^1.5.0"
   }
 }
