--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "svg-inline-loader": "^0.8.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
+    "terser-webpack-plugin": "^2.3",
     "webpack": "^4.35.3",
     "webpack-build-notifier": "^1.0.3",
     "webpack-cli": "^3.3.5",
