chore: upgrade dev. dependencies

--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
     "build": "webpack --progress --mode production",
     "dist": "webpack --progress --mode production",
     "release": "npm run build && npm run dist",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack serve --mode development"
   },
   "author": "Karim Slimani <karim@playmedia.fr>",
   "license": "MIT",
   "repository": "kslimani/clappr-google-ima-html5-preroll",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-add-module-exports": "^1.0.2",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-add-module-exports": "^1.0.4",
     "compass-mixins": "^0.12.10",
-    "css-loader": "^3.0.0",
+    "css-loader": "^5.2.4",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "svg-inline-loader": "^0.8.0",
